--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "devDependencies": {
-    "angular": "^1.5.5"
+    "angular": "^1.5.5",
+    "angular-route": "^1.5.5"
   }
 }
