--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "devDependencies": {
     "angular": "^1.5.5",
-    "angular-route": "^1.5.5"
+    "angular-route": "^1.5.5",
+    "angular-bootstrap": "^1.3.2"
   }
 }
